--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
 # Logs
-/app/logs
+logs
 *.log
-/app/npm-debug.log*
-/app/yarn-debug.log*
-/app/yarn-error.log*
-/app/pnpm-debug.log*
-/app/lerna-debug.log*
-/app/.toml
-
-app/node_modules
-/app/dist
-/app/dist-ssr
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+.toml
+node_modules
+dist
+dist-ssr
 *.local
 
 # Editor directories and files
